// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pg_lsn.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 30,
            "relname": "pg_lsn_tbl",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "f1",
                "is_local": true,
                "location": 42,
                "typeName": {
                  "location": 45,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_lsn",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 6 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 44,
            "relname": "pg_lsn_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 63,
                          "sval": {
                            "sval": "0/0",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 9 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "pg_lsn_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 32,
                          "sval": {
                            "sval": "FFFFFFFF/FFFFFFFF",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 10 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 33,
            "relname": "pg_lsn_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 52,
                          "sval": {
                            "sval": "G/0",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 13 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "pg_lsn_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 32,
                          "sval": {
                            "sval": "-1/0",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 14 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "pg_lsn_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 32,
                          "sval": {
                            "sval": " 0/12345678",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 15 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "pg_lsn_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 32,
                          "sval": {
                            "sval": "ABCD/",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 16 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "pg_lsn_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 32,
                          "sval": {
                            "sval": "/ABCD",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 17 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 52,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 70,
                          "sval": {
                            "sval": "16AE7F7",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 81,
                          "sval": {
                            "sval": "pg_lsn",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_input_is_valid",
                        },
                      },
                    ],
                    "location": 52,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 20 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeFunction": {
                "functions": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 35,
                                  "sval": {
                                    "sval": "16AE7F7",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 46,
                                  "sval": {
                                    "sval": "pg_lsn",
                                  },
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "pg_input_error_info",
                                },
                              },
                            ],
                            "location": 15,
                          },
                        },
                        {},
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 21 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 54,
                "relname": "pg_lsn_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 32,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 36,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "min",
                        },
                      },
                    ],
                    "location": 32,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 41,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 45,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "max",
                        },
                      },
                    ],
                    "location": 41,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 24 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "pg_lsn_tbl",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 26 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 22,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "A_Const": {
                        "location": 22,
                        "sval": {
                          "sval": "0/16AE7F8",
                        },
                      },
                    },
                    "location": 34,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 36,
                            "sval": {
                              "sval": "0/16AE7F8",
                            },
                          },
                        },
                        "location": 47,
                        "typeName": {
                          "location": 49,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_lsn",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 29 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 8,
                            "sval": {
                              "sval": "0/16AE7F8",
                            },
                          },
                        },
                        "location": 19,
                        "typeName": {
                          "location": 21,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_lsn",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 28,
                    "name": [
                      {
                        "String": {
                          "sval": "<>",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 31,
                        "sval": {
                          "sval": "0/16AE7F7",
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 30 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "A_Const": {
                        "location": 8,
                        "sval": {
                          "sval": "0/16AE7F7",
                        },
                      },
                    },
                    "location": 20,
                    "name": [
                      {
                        "String": {
                          "sval": "<",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 22,
                            "sval": {
                              "sval": "0/16AE7F8",
                            },
                          },
                        },
                        "location": 33,
                        "typeName": {
                          "location": 35,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_lsn",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 31 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "A_Const": {
                        "location": 8,
                        "sval": {
                          "sval": "0/16AE7F8",
                        },
                      },
                    },
                    "location": 20,
                    "name": [
                      {
                        "String": {
                          "sval": ">",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 29,
                            "sval": {
                              "sval": "0/16AE7F7",
                            },
                          },
                        },
                        "location": -1,
                        "typeName": {
                          "location": 22,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_lsn",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 32 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 8,
                            "sval": {
                              "sval": "0/16AE7F7",
                            },
                          },
                        },
                        "location": 19,
                        "typeName": {
                          "location": 21,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_lsn",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 28,
                    "name": [
                      {
                        "String": {
                          "sval": "-",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 30,
                            "sval": {
                              "sval": "0/16AE7F8",
                            },
                          },
                        },
                        "location": 41,
                        "typeName": {
                          "location": 43,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_lsn",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 33 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 8,
                            "sval": {
                              "sval": "0/16AE7F8",
                            },
                          },
                        },
                        "location": 19,
                        "typeName": {
                          "location": 21,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_lsn",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 28,
                    "name": [
                      {
                        "String": {
                          "sval": "-",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 30,
                            "sval": {
                              "sval": "0/16AE7F7",
                            },
                          },
                        },
                        "location": 41,
                        "typeName": {
                          "location": 43,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_lsn",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 34 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 8,
                            "sval": {
                              "sval": "0/16AE7F7",
                            },
                          },
                        },
                        "location": 19,
                        "typeName": {
                          "location": 21,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_lsn",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 28,
                    "name": [
                      {
                        "String": {
                          "sval": "+",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "ival": {
                              "ival": 16,
                            },
                            "location": 30,
                          },
                        },
                        "location": 32,
                        "typeName": {
                          "location": 34,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_catalog",
                              },
                            },
                            {
                              "String": {
                                "sval": "numeric",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 35 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "ival": {
                              "ival": 16,
                            },
                            "location": 8,
                          },
                        },
                        "location": 10,
                        "typeName": {
                          "location": 12,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_catalog",
                              },
                            },
                            {
                              "String": {
                                "sval": "numeric",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 20,
                    "name": [
                      {
                        "String": {
                          "sval": "+",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 22,
                            "sval": {
                              "sval": "0/16AE7F7",
                            },
                          },
                        },
                        "location": 33,
                        "typeName": {
                          "location": 35,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_lsn",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 36 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 8,
                            "sval": {
                              "sval": "0/16AE7F7",
                            },
                          },
                        },
                        "location": 19,
                        "typeName": {
                          "location": 21,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_lsn",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 28,
                    "name": [
                      {
                        "String": {
                          "sval": "-",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "ival": {
                              "ival": 16,
                            },
                            "location": 30,
                          },
                        },
                        "location": 32,
                        "typeName": {
                          "location": 34,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_catalog",
                              },
                            },
                            {
                              "String": {
                                "sval": "numeric",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 37 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 8,
                            "sval": {
                              "sval": "FFFFFFFF/FFFFFFFE",
                            },
                          },
                        },
                        "location": 27,
                        "typeName": {
                          "location": 29,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_lsn",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 36,
                    "name": [
                      {
                        "String": {
                          "sval": "+",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 38,
                          },
                        },
                        "location": 39,
                        "typeName": {
                          "location": 41,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_catalog",
                              },
                            },
                            {
                              "String": {
                                "sval": "numeric",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 38 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 8,
                            "sval": {
                              "sval": "FFFFFFFF/FFFFFFFE",
                            },
                          },
                        },
                        "location": 27,
                        "typeName": {
                          "location": 29,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_lsn",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 36,
                    "name": [
                      {
                        "String": {
                          "sval": "+",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "ival": {
                              "ival": 2,
                            },
                            "location": 38,
                          },
                        },
                        "location": 39,
                        "typeName": {
                          "location": 41,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_catalog",
                              },
                            },
                            {
                              "String": {
                                "sval": "numeric",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 38 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 30,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 30,
                            "sval": {
                              "sval": "0/1",
                            },
                          },
                        },
                        "location": 35,
                        "typeName": {
                          "location": 37,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_lsn",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 44,
                    "name": [
                      {
                        "String": {
                          "sval": "-",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 46,
                          },
                        },
                        "location": 47,
                        "typeName": {
                          "location": 49,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_catalog",
                              },
                            },
                            {
                              "String": {
                                "sval": "numeric",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 40 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 8,
                            "sval": {
                              "sval": "0/1",
                            },
                          },
                        },
                        "location": 13,
                        "typeName": {
                          "location": 15,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_lsn",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 22,
                    "name": [
                      {
                        "String": {
                          "sval": "-",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "ival": {
                              "ival": 2,
                            },
                            "location": 24,
                          },
                        },
                        "location": 25,
                        "typeName": {
                          "location": 27,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_catalog",
                              },
                            },
                            {
                              "String": {
                                "sval": "numeric",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 40 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 30,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 30,
                            "sval": {
                              "sval": "0/0",
                            },
                          },
                        },
                        "location": 35,
                        "typeName": {
                          "location": 37,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_lsn",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 44,
                    "name": [
                      {
                        "String": {
                          "sval": "+",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 47,
                                "sval": {
                                  "sval": "FFFFFFFF/FFFFFFFF",
                                },
                              },
                            },
                            "location": 66,
                            "typeName": {
                              "location": 68,
                              "names": [
                                {
                                  "String": {
                                    "sval": "pg_lsn",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        "location": 75,
                        "name": [
                          {
                            "String": {
                              "sval": "-",
                            },
                          },
                        ],
                        "rexpr": {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 77,
                                "sval": {
                                  "sval": "0/0",
                                },
                              },
                            },
                            "location": 82,
                            "typeName": {
                              "location": 84,
                              "names": [
                                {
                                  "String": {
                                    "sval": "pg_lsn",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 42 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 8,
                            "sval": {
                              "sval": "FFFFFFFF/FFFFFFFF",
                            },
                          },
                        },
                        "location": 27,
                        "typeName": {
                          "location": 29,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_lsn",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 36,
                    "name": [
                      {
                        "String": {
                          "sval": "-",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 39,
                                "sval": {
                                  "sval": "FFFFFFFF/FFFFFFFF",
                                },
                              },
                            },
                            "location": 58,
                            "typeName": {
                              "location": 60,
                              "names": [
                                {
                                  "String": {
                                    "sval": "pg_lsn",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        "location": 67,
                        "name": [
                          {
                            "String": {
                              "sval": "-",
                            },
                          },
                        ],
                        "rexpr": {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 69,
                                "sval": {
                                  "sval": "0/0",
                                },
                              },
                            },
                            "location": 74,
                            "typeName": {
                              "location": 76,
                              "names": [
                                {
                                  "String": {
                                    "sval": "pg_lsn",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 43 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 8,
                            "sval": {
                              "sval": "0/16AE7F7",
                            },
                          },
                        },
                        "location": 19,
                        "typeName": {
                          "location": 21,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_lsn",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 28,
                    "name": [
                      {
                        "String": {
                          "sval": "+",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 30,
                            "sval": {
                              "sval": "NaN",
                            },
                          },
                        },
                        "location": 35,
                        "typeName": {
                          "location": 37,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_catalog",
                              },
                            },
                            {
                              "String": {
                                "sval": "numeric",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 44 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 8,
                            "sval": {
                              "sval": "0/16AE7F7",
                            },
                          },
                        },
                        "location": 19,
                        "typeName": {
                          "location": 21,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_lsn",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 28,
                    "name": [
                      {
                        "String": {
                          "sval": "-",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 30,
                            "sval": {
                              "sval": "NaN",
                            },
                          },
                        },
                        "location": 35,
                        "typeName": {
                          "location": 37,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_catalog",
                              },
                            },
                            {
                              "String": {
                                "sval": "numeric",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 45 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExplainStmt": {
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "costs",
                "location": 45,
              },
            },
          ],
          "query": {
            "SelectStmt": {
              "distinctClause": [
                {},
              ],
              "fromClause": [
                {
                  "RangeFunction": {
                    "alias": {
                      "aliasname": "i",
                    },
                    "functions": [
                      {
                        "List": {
                          "items": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1,
                                      },
                                      "location": 121,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 10,
                                      },
                                      "location": 124,
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "generate_series",
                                    },
                                  },
                                ],
                                "location": 105,
                              },
                            },
                            {},
                          ],
                        },
                      },
                    ],
                  },
                },
                {
                  "RangeFunction": {
                    "alias": {
                      "aliasname": "j",
                    },
                    "functions": [
                      {
                        "List": {
                          "items": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1,
                                      },
                                      "location": 154,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 10,
                                      },
                                      "location": 157,
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "generate_series",
                                    },
                                  },
                                ],
                                "location": 138,
                              },
                            },
                            {},
                          ],
                        },
                      },
                    ],
                  },
                },
                {
                  "RangeFunction": {
                    "alias": {
                      "aliasname": "k",
                    },
                    "functions": [
                      {
                        "List": {
                          "items": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1,
                                      },
                                      "location": 187,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 5,
                                      },
                                      "location": 190,
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "generate_series",
                                    },
                                  },
                                ],
                                "location": 171,
                              },
                            },
                            {},
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "sortClause": [
                {
                  "SortBy": {
                    "location": -1,
                    "node": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "f",
                            },
                          },
                        ],
                        "location": 244,
                      },
                    },
                    "sortby_dir": "SORTBY_DEFAULT",
                    "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                  },
                },
              ],
              "targetList": [
                {
                  "ResTarget": {
                    "location": 72,
                    "name": "f",
                    "val": {
                      "TypeCast": {
                        "arg": {
                          "A_Expr": {
                            "kind": "AEXPR_OP",
                            "lexpr": {
                              "A_Expr": {
                                "kind": "AEXPR_OP",
                                "lexpr": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "i",
                                        },
                                      },
                                    ],
                                    "location": 73,
                                  },
                                },
                                "location": 75,
                                "name": [
                                  {
                                    "String": {
                                      "sval": "||",
                                    },
                                  },
                                ],
                                "rexpr": {
                                  "A_Const": {
                                    "location": 78,
                                    "sval": {
                                      "sval": "/",
                                    },
                                  },
                                },
                              },
                            },
                            "location": 82,
                            "name": [
                              {
                                "String": {
                                  "sval": "||",
                                },
                              },
                            ],
                            "rexpr": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "j",
                                    },
                                  },
                                ],
                                "location": 85,
                              },
                            },
                          },
                        },
                        "location": 87,
                        "typeName": {
                          "location": 89,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_lsn",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "BoolExpr": {
                  "args": [
                    {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "i",
                                },
                              },
                            ],
                            "location": 203,
                          },
                        },
                        "location": 205,
                        "name": [
                          {
                            "String": {
                              "sval": "<=",
                            },
                          },
                        ],
                        "rexpr": {
                          "A_Const": {
                            "ival": {
                              "ival": 10,
                            },
                            "location": 208,
                          },
                        },
                      },
                    },
                    {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "j",
                                },
                              },
                            ],
                            "location": 215,
                          },
                        },
                        "location": 217,
                        "name": [
                          {
                            "String": {
                              "sval": ">",
                            },
                          },
                        ],
                        "rexpr": {
                          "A_Const": {
                            "ival": {},
                            "location": 219,
                          },
                        },
                      },
                    },
                    {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "j",
                                },
                              },
                            ],
                            "location": 225,
                          },
                        },
                        "location": 227,
                        "name": [
                          {
                            "String": {
                              "sval": "<=",
                            },
                          },
                        ],
                        "rexpr": {
                          "A_Const": {
                            "ival": {
                              "ival": 10,
                            },
                            "location": 230,
                          },
                        },
                      },
                    },
                  ],
                  "boolop": "AND_EXPR",
                  "location": 211,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`pg_lsn.sql > line 54 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "distinctClause": [
            {},
          ],
          "fromClause": [
            {
              "RangeFunction": {
                "alias": {
                  "aliasname": "i",
                },
                "functions": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 1,
                                  },
                                  "location": 67,
                                },
                              },
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 10,
                                  },
                                  "location": 70,
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "generate_series",
                                },
                              },
                            ],
                            "location": 51,
                          },
                        },
                        {},
                      ],
                    },
                  },
                ],
              },
            },
            {
              "RangeFunction": {
                "alias": {
                  "aliasname": "j",
                },
                "functions": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 1,
                                  },
                                  "location": 100,
                                },
                              },
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 10,
                                  },
                                  "location": 103,
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "generate_series",
                                },
                              },
                            ],
                            "location": 84,
                          },
                        },
                        {},
                      ],
                    },
                  },
                ],
              },
            },
            {
              "RangeFunction": {
                "alias": {
                  "aliasname": "k",
                },
                "functions": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 1,
                                  },
                                  "location": 133,
                                },
                              },
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 5,
                                  },
                                  "location": 136,
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "generate_series",
                                },
                              },
                            ],
                            "location": 117,
                          },
                        },
                        {},
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f",
                        },
                      },
                    ],
                    "location": 190,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 18,
                "name": "f",
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "A_Expr": {
                            "kind": "AEXPR_OP",
                            "lexpr": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "i",
                                    },
                                  },
                                ],
                                "location": 19,
                              },
                            },
                            "location": 21,
                            "name": [
                              {
                                "String": {
                                  "sval": "||",
                                },
                              },
                            ],
                            "rexpr": {
                              "A_Const": {
                                "location": 24,
                                "sval": {
                                  "sval": "/",
                                },
                              },
                            },
                          },
                        },
                        "location": 28,
                        "name": [
                          {
                            "String": {
                              "sval": "||",
                            },
                          },
                        ],
                        "rexpr": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "j",
                                },
                              },
                            ],
                            "location": 31,
                          },
                        },
                      },
                    },
                    "location": 33,
                    "typeName": {
                      "location": 35,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_lsn",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
          "whereClause": {
            "BoolExpr": {
              "args": [
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "i",
                            },
                          },
                        ],
                        "location": 149,
                      },
                    },
                    "location": 151,
                    "name": [
                      {
                        "String": {
                          "sval": "<=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 10,
                        },
                        "location": 154,
                      },
                    },
                  },
                },
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "j",
                            },
                          },
                        ],
                        "location": 161,
                      },
                    },
                    "location": 163,
                    "name": [
                      {
                        "String": {
                          "sval": ">",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 165,
                      },
                    },
                  },
                },
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "j",
                            },
                          },
                        ],
                        "location": 171,
                      },
                    },
                    "location": 173,
                    "name": [
                      {
                        "String": {
                          "sval": "<=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 10,
                        },
                        "location": 176,
                      },
                    },
                  },
                },
              ],
              "boolop": "AND_EXPR",
              "location": 157,
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;
